docs/tests/parser/declarations/invalid/EnumMissingSemiInFunc.src
fn void test() {
    enum Color { Red, Green }
    let int x = 0;
}
